[soony.kwonn] HTTP 웹 서버 구현 Step2 리뷰 요청 드립니다. (#67)
* refactor: Slf4j를 이용한 로깅으로 변경

* build: Slf4j를 제외한 logback 설정 제거

* feat: HttpCookie 클래스 추가 및 Header에 cookies 인스턴스 변수 추가

* feat: Session 및 SessionManager 추가

* refactor: 잘못된 getInstance 메서드 수정

* refactor: SessionManager 싱글톤으로 변경

* refactor: UserController가 Singleton SessionManager를 인스턴스로 갖도록 변경

* feat: getSessionId 메서드 추가

* refactor: Utils 메서드 역할 분리
IOUtils에서 UserUtils, HttpUtils 로 역할 분리

* refactor: Utils 클래스 패키지 위치 변경

* refactor: Util 메서드 위치 변경

* refactor: 불필요한 Util 클래스 제거

* feat: Post 방식으로 로그인 기능 추가

* feat: login 실패시 /user/login_failed.html로 리다이렉트

* rafactor: HandleBarsTest가 적용되도록 html에 mustache 적용

* feat: 사용자 목록 페이지를 동적으로 생성하도록 기능 추가

* feat: 사용자 목록 조회시, 세션이 유효하지 않다면 로그인 페이지로 리다이렉트

* refactor: 사용자 목록 버튼 클릭시 /user/list.html이 아닌 /user/list로 요청이 가도록 html 파일 변경

* refactor: UserController 내의 세션 확인 메서드 SessionUtils로 분리

* feat: 이미 로그인된 유저는 /user/login.html 접근시 /index.html로 리다이렉트

* fix: 잘못된 패스워드 체크 수정

* docs: step2 구현사항 정리

* feat: RequestHandler의 역할 분리

* test: 실패 테스트 수정

* refactor: 코드 래포맷

* refactor: IO 관련 메서드 분리

---------

Co-authored-by: soony.kwonn <soony.kwonn@kakaocorp.com>